--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "lodash": "^4.17.5",
     "strapi": "3.0.0-alpha.16",
-    "strapi-hook-mongoose": "3.0.0-alpha.16"
+    "strapi-hook-mongoose": "^3.0.0-alpha.16",
+    "stripe": "^6.20.0"
   },
   "author": {
     "name": "kevin",
